# NDTP

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
ndtp/: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  schemas.py  setup.cfg  unpacker.py
ndtp/ndtp/: functions.py  main.py  schemas.py
ndtp/tests/: conftest.py  test_main.py
tests/: conftest.py  test_main.py
