[tool.poetry]
name = "ndtp"
version = "0.1.0"
description = ""
authors = ["EKA <eka@limantis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.9.0"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
pytest-clarity = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
